[package]
name = "ytb-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.16", features = ["blocking"] }
regex = "1.7.3"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
json = "0.12.4"
error-chain = "0.12.4"

